[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-docs-mcp"
version = "0.2.0"
description = "MCP server for surgical Google Docs editing and commenting"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "google-docs", "google-drive", "llm", "ai-agents"]
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "fastmcp>=2.0.0",
]

[project.scripts]
google-docs-mcp = "server:main"
google-docs-mcp-auth = "auth_setup:main"
google-drive-mcp = "server:main"
google-drive-mcp-auth = "auth_setup:main"

[project.urls]
Homepage = "https://github.com/dbuxton/google-docs-mcp"
Repository = "https://github.com/dbuxton/google-docs-mcp"

[tool.setuptools]
py-modules = ["server", "auth_setup", "docs_edit"]
